--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,8 +1,8 @@
-@media screen and (min-width:1900px) {
+@media screen and (min-width: 1900px) {
   #frame6 .text-center {
     font-size: 65px;
   }
-  
+
   #frame6 .isiFrame6 .row .col #judulIsiTextKomponen {
     font-size: 40px;
   }
@@ -83,7 +83,7 @@
   }
 }
 
-@media screen and (max-width: 1400px)  {
+@media screen and (max-width: 1400px) {
   body {
     --title: 80px;
     --sub-title: 20px;
@@ -133,7 +133,6 @@
     height: 60vh;
   }
 
-    
   #frame2 .rectangle .parent-content .left-content .image-content .circle {
     height: 5vh;
     width: 5vh;
@@ -147,7 +146,7 @@
     font-size: 2.2vh;
   }
 
-    #frame2 .rectangle .parent-content .left-content .button .fa-angle-right,
+  #frame2 .rectangle .parent-content .left-content .button .fa-angle-right,
   #frame3 .middle .parent-card .card button .fa-angle-right {
     font-size: 2vh;
   }
@@ -196,12 +195,10 @@
     width: 120%;
   }
 
-  
   #frame5 .center .right .info {
     margin-top: 4%;
     margin-left: 0%;
   }
-
 
   #frame5 .center .right .info .card {
     padding: 9%;
@@ -232,7 +229,6 @@
     height: 60vh;
   }
 
-    
   #frame2 .rectangle .parent-content .left-content .image-content .circle {
     height: 5vh;
     width: 5vh;
@@ -246,7 +242,7 @@
     font-size: 2.2vh;
   }
 
-    #frame2 .rectangle .parent-content .left-content .button .fa-angle-right,
+  #frame2 .rectangle .parent-content .left-content .button .fa-angle-right,
   #frame3 .middle .parent-card .card button .fa-angle-right {
     font-size: 2vh;
   }
@@ -300,7 +296,6 @@
     --image-adjust: 170px;
   }
 
-  
   #frame1 .parent-content .right-content .rectangle .teks-vision .vision {
     font-size: 230px;
     color: #fff;
@@ -327,7 +322,6 @@
     height: 40vw;
   }
 
-    
   #frame2 .rectangle .parent-content .left-content .image-content .circle {
     height: 5vh;
     width: 5vh;
@@ -341,7 +335,7 @@
     font-size: 2.2vh;
   }
 
-    #frame2 .rectangle .parent-content .left-content .button .fa-angle-right,
+  #frame2 .rectangle .parent-content .left-content .button .fa-angle-right,
   #frame3 .middle .parent-card .card button .fa-angle-right {
     font-size: 2vh;
   }
@@ -394,7 +388,7 @@
   #frame3 .middle .parent-card .card img {
     width: 30vh;
   }
-  
+
   #frame3 .middle .parent-card .card h1 {
     font-size: 2.5vh;
     font-weight: bold;
@@ -403,7 +397,7 @@
   #frame4 {
     height: 1020px;
   }
-  
+
   #frame3 .middle .parent-card .card p {
     font-size: 2vh;
   }
@@ -413,13 +407,13 @@
     margin-top: 15%;
     height: 410px;
   }
-  
+
   #frame5 .center .left .rectangle .image {
     position: absolute;
     left: 0;
     top: -8%;
   }
-  
+
   #frame5 .center .left .rectangle .image img {
     width: 115%;
   }
@@ -441,15 +435,15 @@
   #frame1::before {
     position: absolute;
     width: 100%;
-    content: '';
+    content: "";
     top: 0;
     left: 0;
     height: 100%;
     z-index: -1;
-    box-shadow: 10px 10px 100px 10px rgba(0,0,0,0.7) inset;
-    -webkit-box-shadow: 10px 10px 100px 10px rgba(0,0,0,0.7) inset;
-    -moz-box-shadow: 10px 10px 100px 10px rgba(0,0,0,0.7) inset;
-    background-image: url('/assets/img/orangvr.jpg');
+    box-shadow: 10px 10px 100px 10px rgba(0, 0, 0, 0.7) inset;
+    -webkit-box-shadow: 10px 10px 100px 10px rgba(0, 0, 0, 0.7) inset;
+    -moz-box-shadow: 10px 10px 100px 10px rgba(0, 0, 0, 0.7) inset;
+    background-image: url("/assets/img/orangvr.jpg");
     /* background-image: url('/assets/img/'); */
     background-size: cover;
     filter: brightness(25%);
@@ -466,7 +460,6 @@
     display: none;
   }
 
-  
   #frame1 .left-content {
     margin-top: 3rem;
     margin-left: 8%;
@@ -476,7 +469,7 @@
     display: flex;
     flex-direction: column-reverse;
   }
-  
+
   #frame2 .rectangle .parent-content .left-content .image-content {
     display: none;
   }
@@ -527,7 +520,7 @@
     font-size: 2.5vh;
     font-weight: bold;
   }
-  
+
   #frame3 .top i {
     font-size: 3vh;
     border-radius: 50%;
@@ -540,12 +533,12 @@
   #frame3 .middle .parent-card .card img {
     width: 30vh;
   }
-  
+
   #frame3 .middle .parent-card .card h1 {
     font-size: 2.5vh;
     font-weight: bold;
   }
-  
+
   #frame3 .middle .parent-card .card p {
     font-size: 2vh;
   }
@@ -574,7 +567,7 @@
     left: 0;
     top: -9%;
   }
-  
+
   #frame5 .center .left .rectangle .image img {
     width: 125%;
   }
@@ -632,7 +625,7 @@
 
   #frame3 .middle .parent-card {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
@@ -640,16 +633,16 @@
   #frame3 .middle .parent-card .card img {
     width: 30vh;
   }
-  
+
   #frame3 .middle .parent-card .card h1 {
     font-size: 2.5vh;
     font-weight: bold;
   }
-  
+
   #frame3 .middle .parent-card .card p {
     font-size: 2vh;
   }
-  
+
   #frame3 .middle .parent-card .card button {
     border: none;
     background-color: #004fce;
@@ -662,11 +655,12 @@
     transition: ease 0.3s;
   }
 
-  #frame3 .bottom .parent b, #frame3 .bottom .parent i {
+  #frame3 .bottom .parent b,
+  #frame3 .bottom .parent i {
     font-size: 1.5vh;
   }
 
-    #frame3 .bottom .parent .side-left .top,
+  #frame3 .bottom .parent .side-left .top,
   .side-right .top {
     width: 7vh;
     height: 2vh;
@@ -678,7 +672,7 @@
     height: 2vh;
     margin-top: 3vh;
   }
-  
+
   #frame3 .bottom .parent .side-right .bottom {
     margin-left: -5vh;
   }
@@ -698,7 +692,7 @@
   #frame4 .parent-card .card .card-body h1 {
     font-size: 2.5vh;
   }
-  
+
   #frame4 .parent-card .card .card-body p {
     font-size: 2vh;
   }
@@ -723,27 +717,27 @@
   }
 
   #frame5 .center .right .info .item-top-left {
-  border-radius: 10px;
-  border: 1px solid #fafafa;
+    border-radius: 10px;
+    border: 1px solid #fafafa;
   }
   #frame5 .center .right .info .item-top-right {
-  border-radius: 10px;
-  border: 1px solid #fafafa;
-  text-align: left;
+    border-radius: 10px;
+    border: 1px solid #fafafa;
+    text-align: left;
   }
 
   #frame5 .center .right .info .item-bottom-left {
-  border-radius: 10px;
-  border: 1px solid #fafafa;
+    border-radius: 10px;
+    border: 1px solid #fafafa;
   }
 
   #frame5 .center .right .info .item-bottom-right {
-  text-align: left;
-  border-radius: 10px;
-  border: 1px solid #fafafa;
+    text-align: left;
+    border-radius: 10px;
+    border: 1px solid #fafafa;
   }
   #frame5 .text-behind {
-  display: none;
+    display: none;
   }
 
   #frame6 #dekorasiKomponen1 {
@@ -751,7 +745,7 @@
     width: 5vw;
     height: 2vh;
   }
-  
+
   #frame6 #dekorasiKomponen2 {
     background-color: #ffa500;
     width: 5vw;
@@ -769,12 +763,12 @@
   }
 
   #frame7 .row .col #kelompokForm #bandingkanForm {
-  height: 30px;
-  width: 170px;
+    height: 30px;
+    width: 170px;
   }
   #frame7 .row .col #kelompokForm #bandingkanForm1 {
-  height: 30px;
-  width: 243px;
+    height: 30px;
+    width: 243px;
   }
 
   #frame7 .row .col #kelompokForm #buttonbandingkankiri {
@@ -824,7 +818,7 @@
 
 @media screen and (max-width: 620px) {
   body {
-    --title : 60px;
+    --title: 60px;
     --sub-title: 18px;
     --paragraph: 16px;
   }
@@ -853,8 +847,7 @@
     object-fit: cover;
   }
 
-    #frame1 .parent-content .left-content .preview
-  .item2 img,
+  #frame1 .parent-content .left-content .preview .item2 img,
   .item3 img {
     display: none;
   }
@@ -868,46 +861,49 @@
     cursor: default;
   }
 
-  #frame1 .parent-content .left-content .preview
-  .item2 .teks2,
+  #frame1 .parent-content .left-content .preview .item2 .teks2,
   .item3 .teks3 {
     display: none;
   }
 
-.slider-container {
-  width: 100%;
-  overflow: hidden;
-  position: relative;
-}
+  .slider-container {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+  }
 
-.preview {
-  display: flex;
-  width: 100%;
-  transition: transform 0.5s ease-in-out;
-}
+  .preview {
+    display: flex;
+    width: 100%;
+    transition: transform 0.5s ease-in-out;
+  }
 
-.item1 img,
-.item1 .teks1 {
-  transition: opacity 0.5s ease-in-out; 
-  opacity: 1; 
-}
+  .item1 img,
+  .item1 .teks1 {
+    transition: opacity 0.5s ease-in-out;
+    opacity: 1;
+  }
 
-.hidden {
-  opacity: 0; 
-}
-
-
+  .hidden {
+    opacity: 0;
+  }
 
   #frame2 .rectangle .parent-content .right-content .box .title-box h1 {
     font-size: calc(var(--sub-title) + 4px);
     font-weight: bold;
-}
+  }
 
-#frame2 .rectangle .parent-content .right-content .box .body-box {
-  height: 28vh;
-}
+  #frame2 .rectangle .parent-content .right-content .box .body-box {
+    height: 28vh;
+  }
 
-  #frame2 .rectangle .parent-content .right-content .mini-image .image #vrRight {
+  #frame2
+    .rectangle
+    .parent-content
+    .right-content
+    .mini-image
+    .image
+    #vrRight {
     display: none;
   }
 
@@ -940,82 +936,82 @@
 
   #frame3 .middle .parent-card .card button {
     font-size: var(--sub-title);
-}
+  }
 
-#frame3 .quote center {
-  margin: auto;
-  margin-left: 5%;
-}
+  #frame3 .quote center {
+    margin: auto;
+    margin-left: 5%;
+  }
 
-#frame3 .bottom .parent center .quotes {
-  font-size: var(--paragraph);
-  display: block;
-  width: 80%;
-  margin: auto;
-}
+  #frame3 .bottom .parent center .quotes {
+    font-size: var(--paragraph);
+    display: block;
+    width: 80%;
+    margin: auto;
+  }
 
-#frame3 .bottom .parent .side-left .bottom, .side-right .bottom {
-  width: 5vh;
-  height: 2vh;
-}
+  #frame3 .bottom .parent .side-left .bottom,
+  .side-right .bottom {
+    width: 5vh;
+    height: 2vh;
+  }
 
-#frame3 .bottom .parent .side-right .bottom {
-  margin-left: -3vh;
-}
+  #frame3 .bottom .parent .side-right .bottom {
+    margin-left: -3vh;
+  }
 
-.side-left .bottom {
-  margin-left: 3vh;
-}
+  .side-left .bottom {
+    margin-left: 3vh;
+  }
 
-#frame3 .bottom .parent .side-left .top, .side-right .top {
-  width: 3vh;
-  height: 2vh;
-}
+  #frame3 .bottom .parent .side-left .top,
+  .side-right .top {
+    width: 3vh;
+    height: 2vh;
+  }
 
-#frame4 .review h1 {
-  font-size: calc(var(--title) - 20px);
-}
+  #frame4 .review h1 {
+    font-size: calc(var(--title) - 20px);
+  }
 
-#frame4 .parent-card .card .card-body h1 {
-  font-size: calc(var(--sub-title) + var(--paragraph) - 8px);
-}
+  #frame4 .parent-card .card .card-body h1 {
+    font-size: calc(var(--sub-title) + var(--paragraph) - 8px);
+  }
 
-#frame4 .parent-card .card .card-body p {
-  font-size: var(--paragraph);
-}
+  #frame4 .parent-card .card .card-body p {
+    font-size: var(--paragraph);
+  }
 
-#frame4 ul li {
-  font-size: var(--paragraph);
-}
+  #frame4 ul li {
+    font-size: var(--paragraph);
+  }
 
-#frame4 .parent-card .card .card-footer p {
-  font-size: var(--paragraph);
-  padding-top: 0;
-  margin-top: 1%;
-}
+  #frame4 .parent-card .card .card-footer p {
+    font-size: var(--paragraph);
+    padding-top: 0;
+    margin-top: 1%;
+  }
 
-#frame5 .text h1 {
-  font-size: calc(var(--title) - 20px);
-  width: 90%;
-  margin-top: 4%;
-}
+  #frame5 .text h1 {
+    font-size: calc(var(--title) - 20px);
+    width: 90%;
+    margin-top: 4%;
+  }
 
-#frame5 .center .right .info .card .content p {
-  font-size: var(--paragraph);
-  width: 100%;
-} 
-
+  #frame5 .center .right .info .card .content p {
+    font-size: var(--paragraph);
+    width: 100%;
+  }
 }
 
 @media screen and (max-height: 878px) and (max-width: 620px) {
-
   #frame3 .middle .text-back {
     font-size: 25vh;
     left: -20vh;
     top: 260vh;
     transform: rotate(90deg);
     width: 100%;
-}
+  }
 }
 
 @media screen and (max-height: 700px) and (max-width: 620px) {
@@ -1032,26 +1028,25 @@
 }
 
 @media screen and (max-width: 580px) {
-
-  
   #frame1 .title {
     width: 100%;
   }
 
-  
   #frame5 {
     padding-bottom: 5%;
   }
 
-  #frame5 .top .icon-left, #frame5 .top .icon-right, #frame5 .bottom .icon-left, #frame5 .bottom .icon-right {
+  #frame5 .top .icon-left,
+  #frame5 .top .icon-right,
+  #frame5 .bottom .icon-left,
+  #frame5 .bottom .icon-right {
     scale: 0.7;
   }
 
-  
   #frame5 .icon {
-       display: none;
+    display: none;
   }
-  
+
   #frame5 .center .right .info .item-top-left {
     border-radius: 10px;
     border: 1px solid #fafafa;
@@ -1075,7 +1070,6 @@
   #frame5 .text-behind {
     display: none;
   }
-  
 
   #frame5 .text h1 {
     text-align: center;
@@ -1089,20 +1083,19 @@
     margin-top: 13%;
   }
 
-  #frame5 .bottom .icon-right .top, #frame5 .bottom .icon-left .top {
+  #frame5 .bottom .icon-right .top,
+  #frame5 .bottom .icon-left .top {
     width: 35px;
     height: 35px;
-  } 
+  }
 
   #frame5 .bottom .icon-right .bottom {
     width: 45px;
-    height: 35px; 
+    height: 35px;
   }
-
 }
 
 @media screen and (max-width: 480px) {
-
   body {
     margin: 0;
     --title: 60px;
@@ -1110,31 +1103,31 @@
     --button: 16px;
     --paragraph: 14px;
   }
-  
+
   .nav {
     position: fixed;
     z-index: 999;
-    width: 100%; 
+    width: 100%;
   }
-  
+
   .nav-button {
     background-color: #fff;
     color: black;
     border-radius: 50%;
-    width: 10vw; 
-    height: 10vw; 
+    width: 10vw;
+    height: 10vw;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    font-size: 2vw; 
+    font-size: 2vw;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     position: absolute;
     top: 50px;
     left: 10px;
     z-index: 1000;
   }
-  
+
   .nav-content {
     position: absolute;
     top: 18vw;
@@ -1151,25 +1144,25 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     border: 1px solid black;
   }
-  
+
   .nav-content a {
     color: black;
     text-decoration: none;
   }
-  
+
   .nav-content li {
     list-style-type: none;
     font-weight: bold;
   }
-  
+
   .nav-content .active {
     border-bottom: 2px solid orange;
   }
-  
+
   .nav-content.open {
     transform: scaleY(1);
   }
-  
+
   #frame1 {
     height: 100vh;
   }
@@ -1184,8 +1177,8 @@
     margin-top: 5rem;
   }
 
-  #frame1 .btn-hp1, #frame1
-  .btn-hp2 {
+  #frame1 .btn-hp1,
+  #frame1 .btn-hp2 {
     font-size: var(--sub-title);
   }
 
@@ -1200,9 +1193,7 @@
     object-fit: cover;
   }
 
-
-    #frame1 .parent-content .left-content .preview
-  .item2 img,
+  #frame1 .parent-content .left-content .preview .item2 img,
   .item3 img {
     display: none;
   }
@@ -1216,8 +1207,7 @@
     cursor: default;
   }
 
-  #frame1 .parent-content .left-content .preview
-  .item2 .teks2,
+  #frame1 .parent-content .left-content .preview .item2 .teks2,
   .item3 .teks3 {
     display: none;
   }
@@ -1231,10 +1221,10 @@
     display: none;
   }
 
-    #frame2 .rectangle {
-        width: 90vw;
-        height: 86vh;
-    }
+  #frame2 .rectangle {
+    width: 90vw;
+    height: 86vh;
+  }
 
   #frame2 .rectangle .parent-content .left-content .button button {
     font-size: var(--sub-title);
@@ -1294,11 +1284,11 @@
     font-size: var(--sub-title);
     font-weight: bold;
   }
-  
+
   #frame3 .middle .parent-card .card p {
     font-size: var(--button);
   }
-  
+
   #frame3 .middle .parent-card .card button {
     border: none;
     background-color: #004fce;
@@ -1315,7 +1305,7 @@
     margin-left: 20%;
     margin-bottom: 5%;
   }
-  
+
   #frame3 .middle .parent-card .card button i {
     width: 15% !important;
     font-size: var(--sub-title) !important;
@@ -1334,15 +1324,15 @@
     height: 2vh;
     margin-top: 3vh;
   }
-  
+
   #frame3 .bottom .parent .side-right .bottom {
     margin-left: -5vh;
   }
 
   #frame3 .middle .text-back {
-        font-size: 25vh;
-        left: -30%;
-        top: 250%;
+    font-size: 25vh;
+    left: -30%;
+    top: 250%;
   }
 
   #frame3 .bottom .parent center .quotes {
@@ -1351,31 +1341,29 @@
     width: 100%;
   }
 
-
   #frame4 {
     margin-bottom: 25%;
   }
 
   #frame4 .review h1 {
     font-size: calc(var(--title) - 30px);
+  }
+
+  #frame4 .parent-card .card .card-body ul li {
+    font-size: var(--paragraph);
+  }
+
+  #frame5 .text h1 {
+    font-size: calc(var(--title) - 30px);
+    width: 90%;
+  }
+
+  #kelompokForm .form-control {
+    padding: 2% 15%;
+  }
 }
 
-#frame4 .parent-card .card .card-body ul li {
-  font-size: var(--paragraph);
-}
-
-#frame5 .text h1 {
-  font-size: calc(var(--title) - 30px);
-  width: 90%;
-}
-
-#kelompokForm .form-control {
-  padding: 2% 15%;
-}
-
-}
-
-@media screen and (max-width:  460px) {
+@media screen and (max-width: 460px) {
   #frame1 .parent-content .left-content .preview .item1 img {
     display: block;
     height: 10vh;
@@ -1384,7 +1372,6 @@
 }
 
 @media screen and (max-width: 440px) {
-
   #frame1 .title {
     font-size: calc(var(--title) - 10px);
   }
@@ -1402,8 +1389,6 @@
   #frame1 .parent-content .left-content .parent-preview {
     width: 90%;
   }
-
-
 }
 
 @media screen and (max-width: 420px) {
@@ -1419,8 +1404,8 @@
 
 @media screen and (max-width: 393px) {
   body {
-  --title: 58px;
-  --sub-title: 16px;
+    --title: 58px;
+    --sub-title: 16px;
   }
 
   #frame1 .title {
@@ -1430,7 +1415,7 @@
 
   #frame1 .sub-title {
     font-size: var(--sub-title);
-  } 
+  }
 
   #frame1 .btn-hp1,
   #frame1 .btn-hp2 {
@@ -1441,16 +1426,14 @@
     width: 94%;
   }
 
-
   #frame2 .rectangle .parent-content .right-content .box .body-box p {
     line-height: 2;
     font-size: var(--paragraph);
   }
-  
 }
 
 @media screen and (max-width: 350px) {
   body {
-  --title: 55px;
+    --title: 55px;
   }
 }
