--- a/assets/css/stylecopy.css
+++ b/assets/css/stylecopy.css
@@ -233,11 +233,12 @@ body {
   transition: ease 0.3s;
 }
 
-#frame2 .rectangle .parent-content .left-content .button .btn1:hover, .button .btn2:hover {
+#frame2 .rectangle .parent-content .left-content .button .btn1:hover,
+.button .btn2:hover {
   filter: brightness(90%);
 }
 
-#frame2 .rectangle .parent-content .left-content .button .btn2 .fa-angle-right{
+#frame2 .rectangle .parent-content .left-content .button .btn2 .fa-angle-right {
   border-color: black;
 }
 
@@ -359,7 +360,7 @@ body {
 }
 
 #frame3 .middle .parent-card {
-  display: flex;    
+  display: flex;
   justify-content: center;
   align-items: center;
   gap: 20vh;
@@ -429,7 +430,8 @@ body {
   margin-left: -9vh;
 }
 
-#frame3 .bottom .parent b, #frame3 .bottom .parent i {
+#frame3 .bottom .parent b,
+#frame3 .bottom .parent i {
   font-size: 2vh;
 }
 
@@ -459,7 +461,7 @@ body {
 
 #frame4 .review {
   font-family: "Poppins", sans-serif;
-  padding-top: 2%
+  padding-top: 2%;
 }
 
 #frame4 .review h1 {
@@ -760,7 +762,7 @@ body {
   width: 6vw;
   height: 3vh;
 }
-#frame6 .isiFrame6 .row .col .row .col img{
+#frame6 .isiFrame6 .row .col .row .col img {
   width: 90%;
   height: 80%;
 }
@@ -808,19 +810,19 @@ body {
   background-color: #ffa500;
 }
 #frame7 .btn {
-    color: #ffffff;
-    background-color: #004fce;
+  color: #ffffff;
+  background-color: #004fce;
 }
-#frame7 .row .col .gambarBanding img{
+#frame7 .row .col .gambarBanding img {
   width: 80%;
 }
 #footer {
-    width: 100%;
-    margin-top: 7rem;
+  width: 100%;
+  margin-top: 7rem;
 }
 #footer .btn {
-    color: #ffffff;
-    background-color: #004fce;
+  color: #ffffff;
+  background-color: #004fce;
 }
 #footer .col #wandiPengertianFooter {
   width: 25vw;
